# declmagic

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md
doc/: index.html  native-components.html  native-components.md
example/: Cargo.toml
example/src/: example1.rs
examples/example1/: Cargo.toml
examples/example1/src/: example1.rs
guide/: introduction.md  native-components.md  scripting.md  tutorial.md
src/: config.rs  declmagic.rs  log.rs  script.rs  threaded_executer.rs
src/display/: managed_display.rs  mod.rs  sprite_displayer.rs  system.rs
src/display/raw/: data_types.rs  mod.rs
src/display/raw/context/: libglfw3.rs  mod.rs  window.rs
src/display/system/: custom_display_system.rs  mod.rs
src/entities/: loader.rs  mod.rs  state.rs
src/input/: mod.rs  system.rs
src/log/: mod.rs
src/mechanics/: mod.rs
src/mechanics/system/: extern_content.rs  mod.rs
src/physics/: mod.rs
src/resources/: archive_loader.rs  dir_loader.rs  libarchive.rs  mod.rs
src/script/: mod.rs  system.rs
